--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
     margin-top:200px;
 }
 
+p {
+    margin:auto;
+    width:max-content
+}
+
 .square {
     height: 40px;
     width: 40px;
@@ -52,5 +57,5 @@ path {
 }
 
 .available {
-    background-color:rgba(195, 195, 51, 0.5)
+    box-shadow: inset 0 0 0 5px rgba(228, 228, 12, 0.75);
 }
